examples/test/testpolicy15117.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy15117
  namespace: namespace184
spec:
  podSelector:
    matchLabels:
      key23: value28
      key3: value11
      key46: value11
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key30: value16
          key37: value10
      podSelector:
        matchLabels:
          key37: value8
